# last_mile_tracker

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  analysis_options.yaml  config.json
.agent/workflows/: firmware-checks.md  firmware-rules.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: app_store_release.yml  ci.yml  codeql.yml  dashboard_ci.yml  firmware_ci.yml  firmware_esp32.yml  firmware_lint.yml  firmware_release.yml  flutter_ci.yml  mobile_ci.yml  play_store_release.yml  release.yml
apps/driver/: README.md  pubspec.yaml
apps/driver/lib/: main.dart
apps/fleet_dashboard/: eslint.config.mjs  package-lock.json  package.json
apps/fleet_dashboard/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
apps/fleet_dashboard/components/: AlertPanel.tsx  DeckMap.tsx  FleetMap.tsx  SidePanel.tsx
apps/mobile/: .firebaserc  CHANGELOG.md  pubspec.yaml
backend/: README.md
docs/adr/: 0001-record-architecture-decisions.md  0002-monorepo-structure.md
firmware_esp32/: CHANGELOG.md  README.md  boot.py  flash_firmware.sh  main.py  monitor_serial.py  pyproject.toml
firmware_esp32/lib/: ble_advertising.py  ble_ota.py  buzzer.py  config.py  diagnostics.py  http_poster.py  logger.py  ntp_time.py  ota_utils.py  sd_logger.py  sensors.py  shock_buffer.py  st7789_display.py  typing.py  wifi_manager.py  wifi_ota.py
firmware_esp32/tests/: manual_ble_check.py  simple_ble.py  test_config.py
firmware_esp32/tools/: ensure_lib.py
tools/: pull_device_logs.sh
(+177 files in other folders)
