[project]
name = "firmware_esp32"
version = "0.1.0"
description = "ESP32 MicroPython firmware for Last Mile Tracker"
readme = "README.md"

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["."]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".ruff_cache"]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".ruff_cache"]
targets = ["firmware_esp32"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
